# anki-mcp

./: README.md  ankiconnect_apikey_config_for_WSL2.json  mcp_config_example_for_WSL2.json  pyproject.toml  server.py
